# zt-xt1-tester

./: .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: toolchain.cmake
ld/: n32g031_flash.ld
sdk/: CMakeLists.txt
sdk/N32G031_CodeLib/firmware/CMSIS/device/: system_n32g031.c
sdk/N32G031_CodeLib/firmware/n32g031_std_periph_driver/inc/: n32g031_adc.h  n32g031_pwr.h  n32g031_tim.h  n32g031_usart.h
sdk/N32G031_CodeLib/firmware/n32g031_std_periph_driver/src/: n32g031_adc.c  n32g031_dma.c  n32g031_flash.c  n32g031_lpuart.c  n32g031_pwr.c  n32g031_rcc.c  n32g031_rtc.c  n32g031_tim.c  n32g031_usart.c
src/: adc.c  adc.h  bjt.c  bjt.h  calib.c  calib.h  cap.c  cap.h  comp.c  comp.h  component.c  component.h  darlington.c  darlington.h  debug.h  dht11.c  diode.c  diode.h  dmos.c  ds18b20.c  emos.c  emos.h  foo.c  globals.c  globals.h  gpio.c  gpio.h  helpers.c  helpers.h  igbt.c  inductor.c  inductor.h  interface.h  ir.c  jfet.c  jfet.h  main.c  main.h  n32g031_it.c  opamp.h  (+16 more)
test/: CMakeLists.txt  globals.c  helpers.c  helpers.h  misc.c  spice.c  spice.h  test_bjt_npn.c  test_bjt_pnp.c  test_calib.c  test_cap.c  test_darlington_npn.c  test_darlington_pnp.c  test_diode.c  test_dmos.c  test_emos_n.c  test_emos_p.c  test_foo.c  test_inductor.c  test_jfet_n.c  test_jfet_p.c  test_none.c  test_resistor.c  test_self_adjust.c  test_thyristor.c  test_triac.c  test_ujt.c  test_zener.c
test/spice/: 1N4751.txt  1N5221.txt  1N5819.txt  2N2646.txt  2N3904.txt  2N3906.txt  2N4393.txt  2N5116.txt  2SA1302.txt  2SC3281.txt  BT134.txt  DN2530.txt  S4020L.txt
